# OpenJarvis-1

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.gpu  NOTES.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: desktop.yml
desktop/src-tauri/: tauri.conf.json
docs/: index.md
docs/architecture/: agents.md
docs/getting-started/: installation.md
docs/plans/: 2026-02-28-experience-polish-design.md
frontend/: tsconfig.tsbuildinfo
src/openjarvis/: __init__.py  sdk.py  system.py
tests/: conftest.py  test_docker.py  test_integration.py  test_llm_optimizer.py  test_optimize_store.py  test_optimize_types.py  test_optimizer_engine.py  test_pareto.py
tests/agents/: test_channel_agent.py  test_custom.py  test_executor_error_detail.py  test_manager.py  test_manager_recover.py  test_openclaw.py  test_openclaw_plugin.py  test_openclaw_protocol.py  test_openclaw_transport.py  test_orchestrator.py  test_simple.py  test_suggest_action.py
tests/bench/: test_latency.py  test_throughput.py
tests/cli/: test_ask_agent.py  test_ask_context.py  test_ask_router.py  test_cli.py  test_memory_cmd.py
tests/core/: test_config.py  test_config_phase3.py  test_config_phase4.py  test_credentials.py  test_events.py  test_rust_bridge.py  test_types.py
tests/engine/: test_openai_compat.py  test_openai_compat_tools.py
tests/integration/: test_integration.py  test_integration_extended.py
tests/intelligence/: test_router.py
tests/learning/: test_grpo_policy.py  test_heuristic_policy.py  test_heuristic_reward.py  test_system_learning.py
(+174 files in other folders)
